--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "main": "team.js",
   "scripts": {
+    "tests": "jest --verbose test/*",
     "test": "node team.js"
   },
   "repository": {
@@ -11,19 +12,27 @@
     "url": "git+https://github.com/Chelle77322/team_profile.git"
   },
   "keywords": [
-    "Generating",
-    "a",
-    "html",
-    "page",
-    "with",
-    "a",
+    "employee",
+    "profile",
     "team",
-    "profile"
+    "manager",
+    "department",
+    "email",
+    "generating",
+    "office"
   ],
   "author": "Michelle Hall",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Chelle77322/team_profile/issues"
   },
-  "homepage": "https://github.com/Chelle77322/team_profile#readme"
+  "homepage": "https://github.com/Chelle77322/team_profile#readme",
+  "dependencies": {
+    "inquirer": "^7.3.3",
+    "jest": "^26.6.3"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "tests"
+  }
 }
