--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "team_profile",
   "description": "A team profile generator for a company",
   "version": "1.0.0",
-  "main": "team.js",
+  "main": "start.js",
   "scripts": {
     "tests": "jest --verbose test/*",
-    "test": "node team.js"
+    "test": "node start.js"
   },
   "repository": {
     "type": "git",
@@ -28,8 +28,10 @@
   },
   "homepage": "https://github.com/Chelle77322/team_profile#readme",
   "dependencies": {
+    "app": "^0.1.0",
     "inquirer": "^7.3.3",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "repl": "^0.1.3"
   },
   "directories": {
     "lib": "lib",
