--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "description": "A team profile generator for a company",
   "version": "1.0.0",
   "main": "start.js",
+  "directories":{
+    "lib": "lib",
+    "test": "test"
+  },
   "scripts": {
-    "tests": "jest --verbose test/*",
-    "test": "node start.js"
+   "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Chelle77322/team_profile.git"
   },
+  
   "keywords": [
     "employee",
     "profile",
@@ -32,9 +36,6 @@
     "inquirer": "^7.3.3",
     "jest": "^26.6.3",
     "repl": "^0.1.3"
-  },
-  "directories": {
-    "lib": "lib",
-    "test": "tests"
   }
+ 
 }
