--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "start.js",
   "directories": {
     "lib": "lib",
-    "test": "test"
+    "test": "tests"
   },
   "scripts": {
     "test": "jest"
@@ -33,7 +33,10 @@
   "dependencies": {
     "app": "^0.1.0",
     "inquirer": "^7.3.3",
-    "jest": "^26.6.3",
-    "repl": "^0.1.3"
+    "repl": "^0.1.3",
+    "server.js": "^1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
